--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.2",
   "devDependencies": {
     "bootstrap-slider": "^4.5.0",
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-compass": "~0.6.0",
-    "grunt-contrib-jade": "~0.14.1"
+    "grunt-contrib-jade": "~0.14.1",
+    "grunt-contrib-uglify": "^0.8.0"
   },
   "dependencies": {
     "git": "^0.1.5",
