--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "poll",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "devDependencies": {
     "bootstrap-slider": "^4.5.0",
     "grunt": "^0.4.5",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-compass": "~0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jade": "~0.14.1",
+    "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0"
   },
   "dependencies": {
